# ImCircuit

./: .clang-format  .gitignore  :w  CHANGELOG.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile  INSTALL.md  LICENSE  README.md  compile_flags.txt  tr.sh  win.iss
.gitea/workflows/: imcircuit.yml
i18n/: ImCircuit.pot  LogicCircuitSimulator.pot  build.sh  de_DE.po  en.po  en_US.po  es_ES.po  fr_FR.po  ja_JP.po  ko_KR.po  po.h  ru.po  ru_RU.po  tr_TR.po  zh.po  zh_CN.po
pkg/: imcircuit.desktop  resource.rc
pkg/ImCircuit/: default.ini
pkg/ImCircuit/defaults/: config.json  default.ini  themes.json
pkg/LogicCircuitSimulator/: config.json  default.ini
pkg/locale/en/LC_MESSAGES/: LogicCircuitSimulator.mo
pkg/locale/ko_KR/LC_MESSAGES/: LogicCircuitSimulator.mo
pkg/locale/ru/LC_MESSAGES/: LogicCircuitSimulator.mo
pkg/locale/tr_TR/LC_MESSAGES/: LogicCircuitSimulator.mo
pkg/locale/zh/LC_MESSAGES/: LogicCircuitSimulator.mo
pkg/usr/share/applications/: logic-circuit-simulator.desktop
src/: main.cpp
src/api/: api.h
src/api/src/: auth.cpp
src/cli/: CMakeLists.txt  cli.h
src/cli/src/: cli.cpp  command_callbacks.cpp  commands.cpp
src/common/: CMakeLists.txt  common.h  errors.h
src/common/src/: io.cpp  networking.cpp  util.cpp
src/core/: core.h
src/core/src/: component.cpp  engine.cpp  gate.cpp  parser.cpp  scene.cpp  tabs.cpp
src/ui/: CMakeLists.txt  components.h  configuration.h  ui.h
src/ui/src/: Console.cpp  Inspector.cpp  NodeEditor.cpp  Palette.cpp  PropertyEditor.cpp  SceneInfo.cpp  components.cpp  config.cpp  console.cpp  dbg_viewer.cpp  editor.cpp  file_operations.cpp  inspector.cpp  login.cpp  main.cpp  menubar.cpp  node_editor.cpp  notification.cpp  palette.cpp  property_editor.cpp  scene_info.cpp  style.cpp  util.cpp
test/: 1_basic_tests.cpp  2_node_connections.cpp  3_socket_increment.cpp  4_add_remove.cpp  5_component.cpp  6_serialization.cpp  7_io.cpp  7_tabs.cpp  test_util.h
